--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "scrollbar.shadow": "#00000000"
   },
   "editor.fontFamily": "JetBrains Mono Light",
-  "editor.fontLigatures": true
+  "editor.fontLigatures": true,
+  "liveServer.settings.port": 5501
 }
