--- a/api/composer.json
+++ b/api/composer.json
@@ -1,8 +1,19 @@
 {
-  "require": {},
+  "name": "stagiaire/api",
   "autoload": {
     "psr-4": {
-      "App\\": "app"
+      "App\\": "app/",
+      "Framework\\": "framework/"
     }
-  }
+  },
+  "scripts": {
+    "serve": "php -S 127.0.0.1:8000 -t public"
+  },
+  "authors": [
+    {
+      "name": "gdudek",
+      "email": "gdudek.dev@gmail.com"
+    }
+  ],
+  "require": {}
 }
