API/FEAT/ Implementing real db and tweaking existing class to adapt new syntax

--- a/api/composer.json
+++ b/api/composer.json
@@ -4,8 +4,9 @@
         "psr-4": {
             "App\\Class\\": "app/class/",
             "App\\Controller\\": "app/controller/",
-            "Core\\Class\\": "core/class/",
-            "Core\\Controller\\": "core/controller/"
+            "Core\\Class\\": "core/class",
+            "Core\\Controller\\": "core/controller/",
+            "Config\\":"config/"
         }
     },
     "authors": [
