API/FEAT/ starting api and installing firebase to acces JWT functions

--- a/api/composer.json
+++ b/api/composer.json
@@ -17,5 +17,7 @@
             "email": "gdudek.dev@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "firebase/php-jwt": "^6.11"
+    }
 }
