--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/jquery": "^3.5.32",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-chartjs-2": "^2.0.2",
