--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,4 +1,18 @@
 DirectoryIndex public/index.php
 
-RewriteEngine on
-RewriteRule ^/(website_ink/.*)/$  /$1.php [L,QSA]
+RewriteEngine On
+
+# Pour mapper /website_ink/quelquechose/ vers /website_ink/quelquechose.php
+RewriteRule ^website_ink/(.*)/$ /website_ink/$1.php [L,QSA]
+
+# Gérer les requêtes CORS (OPTIONS)
+<IfModule mod_rewrite.c>
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
+</IfModule>
+
+<IfModule mod_headers.c>
+    Header always set Access-Control-Allow-Origin "http://localhost:5173"
+    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS"
+    Header always set Access-Control-Allow-Headers "Content-Type, Authorization"
+</IfModule>
