--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.10",
     "isbot": "^5.1.17",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -26,6 +27,7 @@
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/jquery": "^3.5.32",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-chartjs-2": "^2.0.2",
