--- a/api2/composer.json
+++ b/api2/composer.json
@@ -7,8 +7,9 @@
       "Core\\Model\\":"core/model/",
       "Core\\Controller\\": "core/controller/",
       "Config\\": "config/",
-      "Api\\Model\\": "src/api/model",
-      "Api\\Controller\\": "src/api/controller"
+      "Api\\Model\\": "src/api/model/",
+      "Api\\Controller\\": "src/api/controller/",
+      "Observer\\Accounts\\":"src/observer/accounts/"
     }
   },
   "authors": [
